@@ -245,6 +245,14 @@ prevent users from accessing invalid accounts.
   'associations' option is automatically set.  If you want QOS limits to be
   enforced you need to use the 'limits' option.
 </li>
+<li>safe - This will ensure a job will only be launched when using an
+  association or qos that has a GrpCPUMins limit set if the job will be
+  able to run to completion. Without this option set, jobs will be
+  launched as long as their usage hasn't reached the cpu-minutes limit
+  which can lead to jobs being launched but then killed when the limit is
+  reached. By setting this option, both the 'associations' option and the
+  'limits' option are set automatically.
+</li>
 <li>wckeys - This will prevent users from running jobs under a wckey
   that they don't have access to.  By using this option, the
   'associations' option is automatically set.  The 'TrackWCKey' option is also
@@ -803,7 +811,7 @@ as deleted.
 If an entity has existed for less than 1 day, the entity will be removed
 completely. This is meant to clean up after typographic errors.</p>
 
-<p style="text-align: center;">Last modified 19 October 2012</p>
+<p style="text-align: center;">Last modified 30 October 2012</p>
 
 <!--#include virtual="footer.txt"-->
 
