@@ -26,6 +26,9 @@ documents those changes that are of interest to users and admins.
  -- Cray - Prevent calling basil_confirm more than once per job using a flag.
  -- Fix bug with topology/tree and job with min-max node count. Now try to
     get max node count rather than minimizing leaf switches used.
+ -- Add AccountingStorageEnforce=safe option to provide method to avoid jobs
+    launching that wouldn't be able to run to completion because of a
+    GrpCPUMins limit.
 
 * Changes in SLURM 2.5.0.pre3
 =============================
